# gello

3dconnexion/: main.py  spacemouse.py
bimanual-franka-cubepickup_task_submission/: MJDATA.TXT  MUJOCO_LOG.TXT  README.md  mjmodel.xml
bimanual-franka-cubepickup_task_submission/framework/: final.py  main.py  mouse.py  servo_socket.py  sim_2arms.py
gamify-main/: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup_shell.sh
gamify-main/STservo_sdk/: group_sync_read.py
gamify-main/configs/: dp_block_in_bowl.yaml
gamify-main/gamify/: __init__.py
gamify-main/gamify/algs/: __init__.py  base.py  off_policy_algorithm.py
gamify-main/gamify/algs/offline/: bc.py  dp.py
gamify-main/gamify/controllers/: final.py  gello.py  gello2sim.py  gello2sim_2arms.py  gello_arm.xml
gamify-main/gamify/datasets/: __init__.py  rollout_buffer.py
gamify-main/gamify/datasets/replay_buffer/: buffer.py  sampling.py  storage.py
gamify-main/gamify/envs/: __init__.py  deoxys_franka.py  task.py
gamify-main/gamify/networks/: base.py  diffusion.py  transformer.py
gamify-main/gamify/processors/: base.py  image_augmentation.py  normalization.py
gamify-main/gamify/utils/: __init__.py  config.py  evaluate.py  io.py  logger.py  rotations.py  schedules.py  system_monitor.py  trainer.py  utils.py
gamify-main/rtc_sdk/: setup.py
gamify-main/rtc_sdk/rtc_sdk/: __init__.py  rtc_sdk_wrapper.py
gamify-main/scripts/: compute_action_normalization.py  export_gif.py  gello_control.py  replay_demo.py  sync.py  train.py
gamify-main/tools/: parse_sweep.py  utils.py
(+3 files in other folders)
